src/objects/QuickBooks_OAuth_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>ConsumerKey__c</fullName>
        <label>Consumer Key</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerSecret__c</fullName>
        <label>Consumer Secret</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSourcePayments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataSourceQuickBooks__c</fullName>
        <defaultValue>true</defaultValue>
        <label>QuickBooks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentsIntuitReferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intuit Referred</label>
        <type>Checkbox</type>
    </fields>
    <label>QuickBooks OAuth Setting</label>
    <pluralLabel>QuickBooks OAuth Settings</pluralLabel>
</CustomObject>